added IndexReader and Term classes
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2552 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/PyLucene/Makefile.mingw
+++ b/internal/PyLucene/Makefile.mingw
@@ -95,6 +95,11 @@ $(CLASSES)\org\osafoundation\io\PythonReader.h:
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.document.Field
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.document.Document
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.index.IndexWriter
+	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.index.IndexReader
+	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.index.Term
+	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.index.TermDocs
+	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.index.TermEnum
+	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.index.TermPositions
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.search.Searcher
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.search.Query
 	$(JCCH) -d $(CLASSES) --classpath=$(CLASSES) org.apache.lucene.search.Hits
