Limit PATH change just to running the Python instance.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2568 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/m2crypto/Makefile
+++ b/internal/m2crypto/Makefile
@@ -6,9 +6,8 @@ M2CRYPTO=$(INTERNAL)/m2crypto
 
 BUILD=build_$(SNAP)
 
-export PATH:=$(BUILD_ROOT)/$(SNAP)/bin:$(BUILD_ROOT)/$(SNAP)/bin/swig:$(PATH)
-
 build: $(PYTHON)
+	PATH="$(BUILD_ROOT)/$(SNAP)/bin:$(BUILD_ROOT)/$(SNAP)/bin/swig:$(PATH)" \
 	$(PYTHON) setup.py \
 		build_ext --library-dirs=$(BUILD_ROOT)/$(SNAP)/lib \
 			--include-dirs=$(BUILD_ROOT)/$(SNAP)/include \
