bug 1352 - apply patch to fix Windows build
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2579 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/openssl/Makefile
+++ b/external/openssl/Makefile
@@ -121,8 +121,8 @@ $(SRC)/Configure: apply
 expand: openssl-$(VERSION).tar.gz
 	tar xvzf openssl-$(VERSION).tar.gz
 
-apply: expand 
-	echo ok
+apply: expand patches-$(VERSION)
+	patch -Nup0 < patches-$(VERSION); echo ok
 
 clean:
 	rm -rf $(SRC)
