bug 1352; resolve conditionals
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2586 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/openssl/Makefile
+++ b/external/openssl/Makefile
@@ -105,7 +105,8 @@ snap:
 		   $(SNAP)/lib/libcrypto.a \
 		   $(SNAP)/lib/libssl.a
 
-endif
+endif # if OS X or linux
+endif # if Cygwin or not
 
 $(SRC)/Configure: apply
 
