Enable openssl for bug 1352
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2588 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -1,5 +1,5 @@
 
-VERSION=0.3-5
+VERSION=0.3-6
 
 include Makefile.inc
 
@@ -12,6 +12,7 @@ SYSTEMS=persistence/db \
         persistence/dbxml \
         persistence/libxml2 \
         persistence/libxslt \
+	openssl \
         pyxml \
         egenix-mx \
         jabber-py \
