bug 1352; enable m2crypto in build
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2629 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/Makefile
+++ b/internal/Makefile
@@ -4,7 +4,8 @@ include Makefile.inc
 SYSTEMS=PyLucene \
         UUIDext \
         wxPython-2.5 \
-	launchers
+        m2crypto \
+        launchers
 
 .PHONY: binaries $(SYSTEMS)
 
