--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -3,10 +3,11 @@
 # It should *not* be made to depend on external/internal
 # When a version changes, the ARCHIVES list below needs to be updated.
 
-ARCHIVES=../$(SNAP)-0.3-5.tar.gz \
+ARCHIVES=../$(SNAP)-0.3-7.tar.gz \
          ../wxPython-$(SNAP)-2.5-2.tar.gz \
          ../PyLucene-$(SNAP)-0.3-1.tar.gz \
          ../UUIDext-$(SNAP)-0.3-1.tar.gz \
+         ../m2crypto-$(SNAP)-0.12.tar.gz \
          ../Launchers-$(SNAP)-0.3-2.tar.gz
 
 OS=$(shell uname)
