bug 1480; apply needs to be done on OS X before doing the configure
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2641 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/openssl/Makefile
+++ b/external/openssl/Makefile
@@ -67,7 +67,7 @@ openssl:   $(SRC)/$(BUILD)/Makefile
 	mkdir -p $(PREFIX)/lib; \
 	$(MAKE) -f Makefile.ssl install 
 
-$(SRC)/$(BUILD)/Makefile: $(SRC)/Configure
+$(SRC)/$(BUILD)/Makefile: apply $(SRC)/Configure
 	cd $(SRC); mkdir $(BUILD); cp Makefile.org *.h $(BUILD)/; \
 	cp -r crypto ssl apps certs tools util doc include $(BUILD)/;cd $(BUILD);\
 	perl ../Configure -shared --openssldir=$(PREFIX) $(CONF_OPT) $(PLATFORM)
