bug 1502; make build will now work
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2642 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -88,3 +88,10 @@ upload:	$(SNAP)-$(VERSION).tar.gz
 
 install: $(SNAP)-$(VERSION).tar.gz
 	tar -C .. -xvzf $(SNAP)-$(VERSION).tar.gz
+
+build:
+	@for system in $(SYSTEMS); \
+		do \
+			$(MAKE) -C $$system DEBUG=$(DEBUG) ; \
+		done
+
