bug 1507; correction to patch for build paths; r=heikki
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2643 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/SOAPpy/Makefile
+++ b/external/SOAPpy/Makefile
@@ -15,7 +15,7 @@ ifeq ($(OS),Cygwin)
 
 build: apply
 	cd $(SRC); \
-	PATH="$(BUILD_ROOT)/$(SNAP)/bin:$(PATH)"; \
+	PATH="$(BUILD_ROOT)/$(SNAP)/bin:$(PATH)" \
 	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
 
