bug-1371; missed change of dependency for apply target
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2701 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/persistence/libxml2/Makefile
+++ b/external/persistence/libxml2/Makefile
@@ -80,7 +80,7 @@ clean:
 
 endif
 
-apply: patches
+apply: patches-$(VERSION)
 	patch -Nup0 < patches-$(VERSION); echo ok
 
 expand: libxml2-$(VERSION).tar.gz
