bug 1522; winlaunch.vcproj paths error;r=heikki
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2711 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/launchers/win/winlaunch/winlaunch.vcproj
+++ b/internal/launchers/win/winlaunch/winlaunch.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\external\debug\bin\Include; ..\..\..\..\external\python\Python-2.3.3\Include;..\..\..\..\external\python\Python-2.3.3\PC"
+				AdditionalIncludeDirectories="..\..\..\..\external\debug\bin\Include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -71,7 +71,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
-				AdditionalIncludeDirectories="..\..\..\..\external\python\Python-2.3.3\Include;..\..\..\..\external\release\include;..\..\..\..\external\python\Python-2.3.3\PC"
+				AdditionalIncludeDirectories="..\..\..\..\external\release\bin\Include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
