bug 1538; patch Makefile to capture additional libs when preparing tarball;r=heikki
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2714 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/persistence/libxml2/Makefile
+++ b/external/persistence/libxml2/Makefile
@@ -46,7 +46,7 @@ clean:
 snap: 
 	cd $(BUILD_ROOT); \
         tar -cvzf $(LIBXML2)/$(SNAP).tar.gz \
-                  $(SNAP)/$(SITE)/libxml2*
+                  $(SNAP)/$(SITE)/*libxml2*
 
 else
 
@@ -73,7 +73,7 @@ snap:
 	cd $(BUILD_ROOT); \
         tar -cvzf $(LIBXML2)/$(SNAP).tar.gz \
                   $(SNAP)/lib/libxml2* \
-                  $(SNAP)/$(SITE)/libxml2*
+                  $(SNAP)/$(SITE)/*libxml2*
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
