Part of bug 1538, Windows has it's own setup.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2716 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/persistence/libxml2/win32/winSetup.py.in
+++ b/external/persistence/libxml2/win32/winSetup.py.in
@@ -61,7 +61,7 @@ if missing("libxml2-py.c") or missing("libxml2.py"):
     generated.close()
     result.close()
 
-modules = [ 'libxml2' ]
+modules = [ 'libxml2', 'drv_libxml2' ]
 c_files = [ 'libxml2-py.c', 'libxml.c', 'types.c' ]
 includes= [ xml_includes ]
 libs    = [ 'libxml2_a', 'wsock32' ]
