Bug 1551, don't need to do anything for snap target since we don't actually need swig when running Chandler.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2773 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/swig/Makefile
+++ b/external/swig/Makefile
@@ -71,12 +71,9 @@ swig:   $(SRC)/$(BUILD)/Makefile
 
 endif
 
+# snap target can be empty since we don't actually need swig when
+# running Chandler
 snap: 
-	cd $(BUILD_ROOT); \
-	tar -cvzf $(SWIG)/$(SNAP).tar.gz \
-                  $(SNAP)/bin/swig$(EXECUTABLE) \
-                  $(SNAP)/share/aclocal/swig.m4 \
-                  $(SNAP)/lib/swig1.3 
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
