Since we started building swig on Windows ourselves, the location of the swig.exe changed.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2774 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile.inc
+++ b/external/Makefile.inc
@@ -28,7 +28,7 @@ ifeq ($(OS),Cygwin)
 PYTHON:=$(PREFIX)/bin/$(PYTHON).exe
 SITE=bin/Lib/site-packages
 PLATFORM=windows
-SWIG=$(PREFIX)/bin/swig/swig.exe
+SWIG=$(PREFIX)/bin/swig.exe
 else
 ifeq ($(OS),Darwin)
 FRAMEWORK=Library/Frameworks/Python.framework/Versions/2.3
