Add checkout target that creates a log file of the checkout so you can check for conflicts.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2834 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -51,5 +51,11 @@ $(ARCHIVES):
 $(notdir $(ARCHIVES)):
 	tar -C .. -xvzf ../$@
 
+checkout:
+	cd ..; \
+	rm -f cvsco.log;\
+	cvs co chandler-python 2>&1 | tee -a cvsco.log; \
+	echo 'Do |grep "^C " ../cvsco.log| to check for potential conflicts'
+
 install: $(ARCHIVES) $(notdir $(ARCHIVES))
 
