Fix 1556; remove pyxml from external;requirement for Morgen's fix needed for OS X.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2874 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/persistence/libxml2/Makefile
+++ b/external/persistence/libxml2/Makefile
@@ -66,8 +66,15 @@ $(SRC)/$(BUILD)/Makefile: apply
                      --with-python=$(WP) \
                      $(CONF_DBG)
 
-build: $(SRC)/$(BUILD)/Makefile
+compile: $(SRC)/$(BUILD)/Makefile
 	cd $(SRC)/$(BUILD); $(MAKE); $(MAKE) install
+
+py:
+	cd $(SRC)/python; \
+	$(PYTHON) setup.py build --build-base=build_$(SNAP) $(DIST_OPT) \
+                              install --force
+
+build: compile py
 
 snap: 
 	cd $(BUILD_ROOT); \
