--- a/external/Makefile
+++ b/external/Makefile
@@ -95,7 +95,7 @@ upload:	$(SNAP)-$(VERSION).tar.gz
 	scp $(SNAP)-$(VERSION).tar.gz $(UPLOAD)
 
 install: $(SNAP)-$(VERSION).tar.gz
-	tar -C .. -xvzf $(SNAP)-$(VERSION).tar.gz
+	tar -C ../chandler -xvzf $(SNAP)-$(VERSION).tar.gz
 
 checkout:
 	cd ..; \
