Bug 1452, moving debug and release directories under chandler dir.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2906 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/launchers/Makefile
+++ b/internal/launchers/Makefile
@@ -6,11 +6,6 @@ LAUNCHERS=$(INTERNAL)/launchers
 
 BUILD=build_$(SNAP)
 
-# ifeq ($(DEBUG),1)
-#     DEBUG=$DEBUG
-# else
-#     undef DEBUG
-# endif
 
 ifeq ($(PLATFORM),windows)
     SCRIPT_EXTENTION=".bat"
@@ -31,7 +26,12 @@ endif
 
 ifeq ($(OS),Cygwin)
 
-LAUNCHER_FILES=$(SNAP)/chandler.exe
+ifeq ($(DEBUG),1)
+LAUNCHER_FILES=$(SNAP)/chandlerDebug.exe $(SNAP)/bin/chandler.exe
+else
+LAUNCHER_FILES=$(SNAP)/chandler.exe $(SNAP)/bin/chandler.exe
+endif
+
 LIB_FILES=$(SNAP)/bin/ms*dll
 
 ARCHIVE: $(LAUNCHERS)/win/
