Bug 1633, move chandler[Debug].exe to the chandler dir so it will run. These changes fix it when you do a full build. A follow up checkin needed to enable this for make install build.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2932 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/launchers/Makefile
+++ b/internal/launchers/Makefile
@@ -27,9 +27,9 @@ endif
 ifeq ($(OS),Cygwin)
 
 ifeq ($(DEBUG),1)
-LAUNCHER_FILES=$(SNAP)/chandlerDebug.exe $(SNAP)/bin/chandler.exe
+LAUNCHER_FILES=./chandlerDebug.exe $(SNAP)/bin/chandler.exe
 else
-LAUNCHER_FILES=$(SNAP)/chandler.exe $(SNAP)/bin/chandler.exe
+LAUNCHER_FILES=./chandler.exe $(SNAP)/bin/chandler.exe
 endif
 
 LIB_FILES=$(SNAP)/bin/ms*dll
