Move the main Linux launcher into the chandler directory. Fixes this for full build, follow-up checkins needed to fix this for make install build.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2933 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/launchers/Makefile
+++ b/internal/launchers/Makefile
@@ -45,7 +45,11 @@ endif
 
 ifeq ($(OS),Linux)
 
-LAUNCHER_FILES=$(SNAP)/chandler $(SNAP)/lib/chandler_bin
+ifeq ($(DEBUG),1)
+LAUNCHER_FILES=./chandlerDebug $(SNAP)/lib/chandler_bin
+else
+LAUNCHER_FILES=./chandler $(SNAP)/lib/chandler_bin
+endif
 LIB_FILES=
 
 ARCHIVE: $(LAUNCHERS)/linux/
