Bug 1667; clean extra files in chandler directory;r=heikki
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2964 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -59,4 +59,7 @@ checkout:
 install: $(ARCHIVES) $(notdir $(ARCHIVES))
 
 clean:
-	rm -rf $(SNAP)
+	rm -rf $(SNAP); \
+	rm -f chandler.log; \
+	rm -rf __repository__ ; \
+	rm -f randpool.dat
